--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,16 @@ version: '3.9'
 
 services:
     postgres:
-        image: postgres:17.0
-        hostname: postgres
-        container_name: postgres
+        image: postgres:17
         ports:
-            - "5432:5432"
-        volumes:
-            - ./.data/db:/var/lib/postgresql/data
+            - "${POSTGRES_PORT}:5432"
+        environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_HOST_AUTH_METHOD:  trust
         env_file: "./.env"
+        healthcheck:
+            test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+            interval: 30s
+            timeout: 10s
+            retries: 5
